added CSS and working js-jq

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
       </thead>
       <tbody>
         <tr class="rowOne">
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="button A"></td>
+          <td class="button B"></td>
+          <td class="button C"></td>
         </tr>
         <tr class="rowTwo">
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="button D"></td>
+          <td class="button E"></td>
+          <td class="button F"></td>
         </tr>
         <tr class="rowThree">
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="button G"></td>
+          <td class="button H"></td>
+          <td class="button I"></td>
         </tr>
       </tbody>
     </table>
