--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>title</title>
+  <title>Exes and Ohs</title>
   <meta charset="utf-8">
+  <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
@@ -10,26 +11,28 @@
     <div class="nameOfGame">Tic Tac Toe</div>
     <table id="Matrix">
       <thead>
-        <th colspan="3">test</th>
+        <th colspan="3">the X goes first<br>because they always do...
+        </th>
       </thead>
       <tbody>
         <tr class="rowOne">
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="button A"></td>
+          <td class="button B"></td>
+          <td class="button C"></td>
         </tr>
         <tr class="rowTwo">
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="button D"></td>
+          <td class="button E"></td>
+          <td class="button F"></td>
         </tr>
         <tr class="rowThree">
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="button G"></td>
+          <td class="button H"></td>
+          <td class="button I"></td>
         </tr>
       </tbody>
     </table>
+    <button class="ResetButton">Reset</button>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- <script type="text/javascript" src="plugin.js"></script> -->
